[package]
name = "du-rs"
version = "0.3.0"
authors = ["https://github.com/kaubu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
humansize = "1.1.0"
tokio = { version = "1.5.0", features = ["full"] } # Was 1.0.0
tokio-stream = { version = "0.1.5", features = ["fs"] }
futures = "0.3.14"
